--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,204 @@
-.App {
+* {
+  font-family: Roboto, Arial, sans-serif;
+}
+
+div {
+  background-image: url("./img/pattern_17.png");
+}
+
+a {
+  color: #ef690c;
+  text-decoration: underline;
+}
+
+.event-table {
+  text-align: left;
+  display: inline-block;
+  text-align: left;
+
+}
+
+.signup-table {
+  display: inline-block;
+}
+
+td {
+  padding-right: 10px;
+}
+
+th {
+  color: #ef690c;
+}
+
+form {
+  justify-content: center;
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+h1 {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h1, h2 {
+  padding: 1rem;
+  font-family: Roboto, Arial, sans-serif;
+  font-weight: 200;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h3 {
+  font-weight: 600;
+  font-size: 2rem;
+  color: #ef690c;
 }
 
-.App-header {
-  background-color: #282c34;
+h4, h5, h6 {
+  padding: 0.5rem;
+  font-family: Roboto, Arial, sans-serif;
+  font-weight: 200;
+  text-align: center;
+}
+
+hr {
+  background-color: #ef690c;
+}
+
+input {
+  margin: 0.5rem;
+}
+
+p {
+  padding-top: 0.5rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-bottom: 0.5rem;
+}
+
+ol {
+  padding-top: 0.5rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-bottom: 0.5rem;
+  line-height: 1.5rem;
+}
+
+thead {
+    background-color: #383838;
+}
+
+.App {
+  /**
+  background-image: url('./scaleth.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+  position: sticky;
+  **/
+  max-width: 100vw;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+.btn {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  min-width: 10vw;
+  height: 2.5rem;
+  align-self: center;
+}
+
+.container-fluid {
+  background-color: white;
+  padding: 0px;
+  margin: 0px;
+  max-width: 99vw;
+}
+
+.flex-column {
+  margin: 2rem, 2.5rem, 2rem, 2.5rem;
+}
+
+.row, .flex-row {
+  max-width: 99vw;
+  padding-bottom: 1rem;
+}
+
+.Entry {
+  background-color: rgba(255, 255, 255, 0.80);
+}
+
+.Search {
+  padding: 0px;
+  margin: 0px;
+}
+
+.typelogo {
+  padding: 2rem 2rem 2rem 2rem;
+  max-height: 33vh;
+}
+
+.amount {
+  display: flex-wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.margin {
+  margin: 1rem;
+}
+
+.donationColumn {
+  background: #383838;
+  background-color: #383838;
   color: white;
+  justify-content: center;
+  text-align: center;
+  margin-top: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 0.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.introContainer {
+  padding-bottom: 5rem;
+}
+ 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.leaderboard {
+  overflow-x: auto;
+}
+
+.table-tx-header {
+  max-width: 15vw;
+}
+
+.qr-code {
+  width: 15vw;
+  height: auto;
+  padding: 0.5rem;
+}
+
+.word-wrap {
+  font-size: 0.9rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 500;
+  color: #ef690c;
+  text-overflow: clip;
+  background: #383838;
+}
+
+.donation {
+  background: #383838;
+}
+
+.donation-button {
+  background: #ef690c;
 }
